--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
 							<li><a href="members.html">Members</a></li>
 							<li><a href="publications.html">Publications</a></li>
 							<li><a href="facilities.html">Facilities</a></li>
-							<li><a href="group_activities.html">Group Activities</a></li>
-							<li><a href="group_photos.html">Group Photos</a></li>
+							<li><a href="groupphotos.html">Group Photos</a></li>
 						</ul>
 					</nav>
 
@@ -87,7 +86,7 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="research.html">
 										<h2>Research</h2>
 									</a>
 								</article>
@@ -103,7 +102,7 @@
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="publications.html">
 										<h2>Publications</h2>
 									</a>
 								</article>
@@ -111,7 +110,7 @@
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="facilities.html">
 										<h2>Facilities</h2>
 									</a>
 								</article>
@@ -119,15 +118,7 @@
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Group Meetings</h2>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
-									</span>
-									<a href="generic.html">
+									<a href="groupphotos.html">
 										<h2>Group Photos</h2>
 									</a>
 								</article>
@@ -135,46 +126,34 @@
 						</div>
 					</div>
 
-									<!-- Footer -->
-									<footer id="footer">
-										<div class="inner">
-											<section>
-												<h2>Get in touch</h2>
-												<form method="post" action="#">
-													<div class="fields">
-														<div class="field half">
-															<input type="text" name="name" id="name" placeholder="Name" />
-														</div>
-														<div class="field half">
-															<input type="email" name="email" id="email" placeholder="Email" />
-														</div>
-														<div class="field">
-															<textarea name="message" id="message" placeholder="Message"></textarea>
-														</div>
-													</div>
-													<ul class="actions">
-														<li><input type="submit" value="Send" class="primary" /></li>
-													</ul>
-												</form>
-											</section>
-											<section>
-												<h2>Follow</h2>
-												<ul class="icons">
-													<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-													<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-													<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-													<li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-													<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-													<li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
-													<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
-													<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
-												</ul>
-											</section>
-											<ul class="copyright">
-												<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-											</ul>
-										</div>
-									</footer>
+<!-- Footer -->
+<footer id="footer">
+	<div class = 'row'><div class = "column"><h2>Contact us</h2></div></div>
+    <div class="row">
+        <div class="column">
+            <section>
+                <h4>Principal Investigator</h4>
+                <p>Michael F. Crommie<br>
+                345 Birge Hall, Department of Physics<br>
+                University of California, Berkeley<br>
+                Berkeley, CA 94720<br><br>
+                crommie@berkeley.edu</p>
+            </section>
+        </div>
+		<div class="column">
+            <section>
+                <h4>Administrative Assistant</h4>
+                <p>Lisa Partida<br>
+                366 Birge Hall, Department of Physics<br>
+                University of California, Berkeley<br>
+                Berkeley, CA 94720<br><br>
+                lisapartida@berkeley.edu<br>
+				510-664-4102</p>
+            </section>
+        </div>
+    </div>
+</footer>
+
 			</div>
 		
 		<!-- Scripts -->
