--- a/members.html
+++ b/members.html
@@ -25,18 +25,17 @@
 					</header>
 
 				<!-- Menu -->
-					<nav id="menu">
-						<h2>Menu</h2>
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="research.html">Research</a></li>
-							<li><a href="members.html">Members</a></li>
-							<li><a href="publications.html">Publications</a></li>
-							<li><a href="facilities.html">Facilities</a></li>
-							<li><a href="group_activities.html">Group Activities</a></li>
-							<li><a href="group_photos.html">Group Photos</a></li>
-						</ul>
-					</nav>
+				<nav id="menu">
+					<h2>Menu</h2>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="research.html">Research</a></li>
+						<li><a href="members.html">Members</a></li>
+						<li><a href="publications.html">Publications</a></li>
+						<li><a href="facilities.html">Facilities</a></li>
+						<li><a href="groupphotos.html">Group Photos</a></li>
+					</ul>
+				</nav>
 
 				<!-- Main -->
 					<div id="main">
