--- a/publications.html
+++ b/publications.html
@@ -33,8 +33,7 @@
 							<li><a href="members.html">Members</a></li>
 							<li><a href="publications.html">Publications</a></li>
 							<li><a href="facilities.html">Facilities</a></li>
-							<li><a href="group_activities.html">Group Activities</a></li>
-							<li><a href="group_photos.html">Group Photos</a></li>
+							<li><a href="groupphotos.html">Group Photos</a></li>
 						</ul>
 					</nav>
 
@@ -44,6 +43,7 @@
 						<div class="inner">
 							<h1>Publications</h1>
                             <div class="col-6 col-12-medium">
+                                For a most up-to-date list of publications, click <a href="https://scholar.google.com/citations?user=157wzqoAAAAJ&hl=en">here</a>.<br><br>
                                 <ol>
                                     <li>Zuocheng Zhang, Jingxu Xie, Wenyu Zhao, Ruishi Qi, Collin Sanborn, Shaoxin Wang, Salman Kahn, Kenji Watanabe, Takashi Taniguchi, Alex Zettl, Michael Crommie, Feng Wang, 
                                         <a href="https://www.nature.com/articles/s41563-023-01754-3">Engineering correlated insulators in bilayer graphene with a remote Coulomb superlattice</a>, <i>Nature Materials</i>, (2024) </li><br>
@@ -152,6 +152,7 @@
                                     <li>Daniel J Rizzo, Qingqing Dai, Christopher Bronner, Gregory Veber, Brian J Smith, Michio Matsumoto, Simil Thomas, Giang D Nguyen, Patrick R Forrester, William Zhao, Jakob H Jørgensen, William R Dichtel, Felix R Fischer, Hong Li, Jean-Luc Bredas, Michael F Crommie,
                                         <a href="https://pubs.acs.org/doi/full/10.1021/acs.nanolett.9b03998">Revealing the local electronic structure of a single-layer covalent organic framework through electronic decoupling</a>, <i>Nano Letters</i>, 20, 2, (2020) </li><br>
                                </ol>
+                               Older publications will be listed soon...
                             </div>
 						</div>
                     </div>
